--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
   </div>
   
-    <script src="Build/VkBuild.loader.js"></script>
+    <script src="Build/MathCrossVkBuild.loader.js"></script>
     <script>
       const unityContainer = document.querySelector(".unity-container");
       const canvas = document.querySelector("#unity-canvas");
@@ -56,11 +56,11 @@
       loadingBar.style.display = "block";
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/VkBuild.loader.js";
+      var loaderUrl = buildUrl + "/MathCrossVkBuild.loader.js";
       var config = {
-        dataUrl: buildUrl + "/e9847f90b04ea3630a5c68c16ce65b22.data.br",
-        frameworkUrl: buildUrl + "/a392134a4e1e10b6ea032935eed8ee40.js.br",
-        codeUrl: buildUrl + "/02c1f28d177d48ff4d9d25ab5b544637.wasm.br",
+        dataUrl: buildUrl + "/0c7761d9475d426fbe97e1acb68d8fb9.data",
+        frameworkUrl: buildUrl + "/a392134a4e1e10b6ea032935eed8ee40.js",
+        codeUrl: buildUrl + "/02c1f28d177d48ff4d9d25ab5b544637.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Vesna",
       productName: "Math Cross",
