--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
   </div>
   
-    <script src="Build/MathCrossVkBuild.loader.js"></script>
+    <script src="Build/Builds.loader.js"></script>
     <script>
       const unityContainer = document.querySelector(".unity-container");
       const canvas = document.querySelector("#unity-canvas");
@@ -56,11 +56,11 @@
       loadingBar.style.display = "block";
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/MathCrossVkBuild.loader.js";
+      var loaderUrl = buildUrl + "/Builds.loader.js";
       var config = {
-        dataUrl: buildUrl + "/d79c1343a79cf2c40b12bc54e92b84a2.data",
-        frameworkUrl: buildUrl + "/90c1a5f74c22d39f0793e993d46e6c8c.js",
-        codeUrl: buildUrl + "/0d819adae8fd12b2bfd43236f2dcbdc7.wasm",
+        dataUrl: buildUrl + "/573c22111313bacec85513cdb484a3c3.data.unityweb",
+        frameworkUrl: buildUrl + "/d10a01051315db86dc082218459fb10d.js.unityweb",
+        codeUrl: buildUrl + "/5604103e44654b52bd5042b8fa28e00e.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Vesna",
       productName: "Math Cross",
