--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             outline: none;
         }
     </style>
+    <script src="https://unpkg.com/@vkontakte/vk-bridge/dist/browser.min.js"></script>
 </head>
   <body style="text-align: center; padding: 0; border: 0; margin: 0;">
   <div class="unity-container">
@@ -57,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/Builds.loader.js";
       var config = {
-        dataUrl: buildUrl + "/2f4ee6296df4fb56d2d21e535500f821.data.unityweb",
-        frameworkUrl: buildUrl + "/883e926cc271d0b8eb9643823ef3ffae.js.unityweb",
-        codeUrl: buildUrl + "/04b84cfbacb5245fad45964e1147b215.wasm.unityweb",
+        dataUrl: buildUrl + "/57dc22e200437efd22be64fc74fbfc1f.data.unityweb",
+        frameworkUrl: buildUrl + "/1612d3cf2266db7d23910dfc86238a01.js.unityweb",
+        codeUrl: buildUrl + "/e70f840820b527c81310581879887465.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Vesna",
       productName: "Math Cross",
